--- a/assets/css/city.css
+++ b/assets/css/city.css
@@ -60,7 +60,7 @@ h6
 
     letter-spacing: .02em;
 
-    color: #fff;
+    color: #aa8ebf;
 }
 
 h1
@@ -104,7 +104,7 @@ p
 }
 
 .button:hover{
-    color:#aa8ebf;
+    color:#afeeee;
 }
 
 
@@ -118,7 +118,7 @@ a:focus
             transition: all 300ms ease;
     text-decoration: none;
 
-    color: #fff;
+    color: #aa8ebf;
 }
 
 button
@@ -289,7 +289,7 @@ img{
             transition: opacity 1s ease;
 
     background: rgb(175,238,238);
-    background: linear-gradient(180deg, rgba(175,238,238,1) 0%, rgba(170,142,191,1) 90%);
+    background: linear-gradient(180deg, rgba(175,238,238,1) 0%, rgba(170,142,191,0) 81%);
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -626,8 +626,9 @@ img{
         -ms-transform: translateY(-50%);
             transform: translateY(-50%);
 
-    color: #fff;
+    color: #aa8ebf;
 }
+
 
 #service .services-list li .well
 {
