--- a/assets/css/infrastructure.css
+++ b/assets/css/infrastructure.css
@@ -159,71 +159,94 @@ img{
     width: 60%;
 }
 
+#intro .container-mid
+{
+    position: absolute;
+    top: 28vw;
+    width: 100%;
+
+    -webkit-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+            transform: translateY(-50%);
+}
+
+#intro
+{
+    position: relative;
+
+    height: 55vw;
+    margin-bottom: 0;
+
+    text-align: center;
+}
+
+
+.tedd4{
+    border-bottom: solid 5px white;
+    padding-bottom: 2%;
+    padding-left: 1%;
+    width: 30%;
+}
+
 @media (max-width:1660px)
 {
     h3{
-        font-size: 42px;
+        font-size: 3.5vw;
     }
     p{
-        font-size: 30px;
+        font-size: 3vw;
     }
         .content-area .content-area-inner section
     {
-        max-width: 50%;
+        max-width: 65%;
     }
+    
 }
 
 @media (max-width:1400px)
 {
-    h3{
-        font-size: 30px;
-    }
-    p{
-        font-size: 27px;
-    }
+   
         .content-area .content-area-inner section
     {
         max-width: 50%;
     }
 }
 
-@media (max-width:980px)
+@media (max-width:1000px)
 {
-    h3{
-        font-size: 30px;
-    }
-    p{
-        font-size: 22px;
-    }
+    
     .content-area .content-area-inner section
     {
         max-width: 60%;
     }
+    .tedd4{
+        border-bottom: solid 4px white;
+        padding-bottom: 2%;
+        padding-left: 1%;
+        width: 30%;
+    }
+    
 }
 
-@media (max-width:700px)
+@media (max-width:800px)
 {
-    h3{
-        font-size: 26px;
-    }
-    p{
-        font-size: 20px;
-    }
+   
     .content-area .content-area-inner section
     {
         max-width: 65%;
     }
+    .tedd4{
+        border-bottom: solid 3px white;
+        padding-bottom: 2%;
+        padding-left: 1%;
+        width: 30%;
+    }
+    
 }
 
 
 @media (max-width:590px)
 {
-    h3{
-        font-size: 22px;
-    }
-    p{
-        font-size: 18px;
-    }
     .content-area .content-area-inner section
     {
         max-width: 75%;
@@ -425,12 +448,6 @@ img{
     margin-top: 2%;
 }
 
-.tedd4{
-    border-bottom: solid 4px white;
-    padding-bottom: 2%;
-    padding-left: 1%;
-    width: 30%;
-}
 
 .tedd1{
     text-align: center;
@@ -477,32 +494,16 @@ img{
 /** 5. Content Area --> Intro
 *******************************************************************/
 
-#intro
-{
-    position: relative;
 
-    height: 100vh;
-    margin-bottom: 0;
-
-    text-align: center;
-}
 
 .whitepaper{
     
     text-align: center;
 }
 
-#intro .container-mid
-{
-    position: absolute;
-    top: 50%;
 
-    width: 100%;
 
-    -webkit-transform: translateY(-50%);
-        -ms-transform: translateY(-50%);
-            transform: translateY(-50%);
-}
+
 
 #intro .container-mid h1
 {
