--- a/assets/css/infrastructure.css
+++ b/assets/css/infrastructure.css
@@ -194,6 +194,23 @@ img{
     margin: 0 auto 20vh auto;
 }
 
+.header{
+    background-color: var(--black);
+    box-shadow: 1px 1px 5px 0px var(--gray);
+    position: sticky;
+    top: 0;
+    width: 100%;
+    height: 4vw;
+}
+/* Logo */
+.logo{
+    display: inline-block;
+    color: white;
+    font-size: 20px;
+    margin-left: 20px;
+    margin-top: 10px;
+}
+
 @media (max-width:1660px)
 {
     h3{
