--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -42,10 +42,15 @@ a{
 
 /** 1. Basic
 *******************************************************************/
-
 @font-face {
     font-family: original;
-    src: url(../fonts/Undertale-Battle-Font.ttf);
+    src: url(../fonts/AzeretMono/AzeretMono-Medium.ttf);
+}
+
+
+@font-face {
+    font-family: bold;
+    src: url(../fonts/AzeretMono/AzeretMono-Black.ttf);
 }
 
 
