--- a/assets/css/infrastructure.css
+++ b/assets/css/infrastructure.css
@@ -27,8 +27,16 @@
 
 @font-face {
     font-family: original;
-    src: url(../fonts/Undertale-Battle-Font.ttf);
+    src: url(../fonts/AzeretMono/AzeretMono-Medium.ttf);
 }
+
+
+@font-face {
+    font-family: bold;
+    src: url(../fonts/AzeretMono/AzeretMono-Black.ttf);
+}
+
+
 
 html
 {
@@ -46,10 +54,12 @@ body
     font-style: normal;
 
     color: #fff;
-    background: #fff;
+    background: linear-gradient(180deg, rgba(175,238,238,1) 0%, rgba(170,142,191,1) 90%);
 
     -webkit-font-smoothing: antialiased;
 }
+
+
 
 h1,
 h2,
@@ -78,6 +88,7 @@ h2
 h3
 {
     font-size: 2.6rem;
+    font-family: bold;
 }
 
 h4
@@ -101,6 +112,8 @@ p
     line-height: 1.7em;
 }
 
+
+
 .smooth-scroll:hover{
     color:#aa8ebf;
 }
@@ -122,6 +135,8 @@ a:focus
 
     color: #fff;
 }
+
+
 
 button
 {
@@ -195,12 +210,11 @@ img{
 }
 
 .header{
-    background-color: var(--black);
-    box-shadow: 1px 1px 5px 0px var(--gray);
     position: sticky;
     top: 0;
     width: 100%;
     height: 4vw;
+    background: transparent;
 }
 /* Logo */
 .logo{
@@ -209,6 +223,31 @@ img{
     font-size: 20px;
     margin-left: 20px;
     margin-top: 10px;
+
+}
+
+
+@media (max-width:1000px)
+{
+    
+    .content-area .content-area-inner section
+    {
+        max-width: 60%;
+    }
+    .tedd4{
+        border-bottom: solid 4px white;
+        padding-bottom: 2%;
+        padding-left: 1%;
+        width: 30%;
+    }
+    .header{
+        position: sticky;
+        top: 0;
+        width: 100%;
+        height: 50px;
+        background: rgba(175,238,238);
+        z-index: 1000000;
+    }
 }
 
 @media (max-width:1660px)
@@ -235,21 +274,6 @@ img{
     }
 }
 
-@media (max-width:1000px)
-{
-    
-    .content-area .content-area-inner section
-    {
-        max-width: 60%;
-    }
-    .tedd4{
-        border-bottom: solid 4px white;
-        padding-bottom: 2%;
-        padding-left: 1%;
-        width: 30%;
-    }
-    
-}
 
 @media (max-width:900px)
 {
@@ -461,8 +485,6 @@ img{
          -o-transition: opacity 1s ease;
             transition: opacity 1s ease;
 
-            background: rgb(175,238,238);
-            background: linear-gradient(180deg, rgba(175,238,238,1) 0%, rgba(170,142,191,1) 90%);
 
     background-repeat: no-repeat;
     background-size: cover;
