--- a/assets/css/infrastructure.css
+++ b/assets/css/infrastructure.css
@@ -501,7 +501,15 @@ img{
 }
 
 
+.tedd1{
+    text-align: center;
+}    
 
+.img5{
+    width: 100%;
+    margin-top: 1%;
+    margin-bottom: 5%;
+}
 
 
 /** 4. Content Area
