--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -57,7 +57,7 @@ a{
 body
 {
     
-    font-family: 'original', sans-serif;
+    font-family: 'bold', sans-serif;
     font-weight: 300;
     font-style: normal;
     color: #fff;
