--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -44,7 +44,7 @@ html
 body
 {
     
-    font-family: 'original', sans-serif;
+    font-family: 'bold', sans-serif;
     font-weight: 300;
     font-style: normal;
 
