--- a/assets/css/infrastructure.css
+++ b/assets/css/infrastructure.css
@@ -262,6 +262,11 @@ img{
     {
         max-width: 65%;
     }
+
+    #service .services-list li button
+{
+    font-size: 3vw;
+}
     
 }
 
@@ -272,6 +277,8 @@ img{
     {
         max-width: 50%;
     }
+
+    
 }
 
 
@@ -322,6 +329,7 @@ img{
     {
         max-width: 86%;
     }
+    
 
     .logo{
         font-size: 2.3vh;
@@ -781,11 +789,9 @@ img{
 
 #service .services-list li button
 {
-    font-size: 2.4rem;
-    font-size: 2rem;
-    font-weight: 300;
+    
     line-height: 3.4em;
-
+    font-family: bold;
     position: relative;
 
     display: block;
@@ -797,7 +803,6 @@ img{
     text-align: left;
 
     border: none;
-    border-bottom: 2px solid #ccc;
     border-radius: 0;
 }
 
