--- a/assets/css/infrastructure.css
+++ b/assets/css/infrastructure.css
@@ -38,6 +38,8 @@
 
 
 
+
+
 html
 {
     
@@ -220,7 +222,7 @@ img{
 .logo{
     display: inline-block;
     color: white;
-    font-size: 3vh;
+    font-size: 1rem;
     margin-left: 20px;
     margin-top: 10px;
     font-family: bold;
@@ -339,10 +341,11 @@ img{
     
 
     .logo{
-        font-size: 2.3vh;
+        font-size: 0.7rem;
     }
     .header{
         height: 6vh;
+
     }
 }
 
