--- a/assets/css/infrastructure.css
+++ b/assets/css/infrastructure.css
@@ -297,7 +297,7 @@ img{
     {
         max-width: 50%;
     }
-
+    
     
 }
 
@@ -368,7 +368,7 @@ img{
         font-size: 0.8rem;
     }
     .header{
-        height: 6vh;
+        height: 2rem;
 
     }
 }
